# saboru

./: .gitignore  Cargo.toml  build.rs
resources/: resources.gresource.xml  window.ui
src/: main.rs
src/css/: style.css  style.scss
src/custom_button/: imp.rs  mod.rs
src/integer_object/: imp.rs
src/sidebar_item/: imp.rs  mod.rs
src/sidebar_row/: imp.rs  mod.rs  sidebar_row.ui
src/task_object/: imp.rs
src/task_row/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
