[package]
name = "saboru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ashpd = { version = "0.8.1", features = ["gtk4"] }
async-channel = "2.2.0"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_8"] }
