[package]
name = "saboru"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.2.0"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_8"] }

[build-dependencies]
glib-build-tools = "0.19.0"
